--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,11 @@
 }
 
 .card {
-  border: 1px solid black;
-  padding: 5rem;
+  border: 1px dotted black;
+  border-radius: 10px;
+  padding: 2rem;
+}
+
+.toggleDisplay {
+  display: none;
 }/*# sourceMappingURL=styles.css.map */
