--- a/css/styles.scss
+++ b/css/styles.scss
@@ -20,6 +20,11 @@
 }
 
 .card{
-    border: 1px solid black;
-    padding: 5rem;
+    border: 1px dotted black;
+    border-radius: 10px;
+    padding: 2rem;
+}
+
+.toggleDisplay{
+    display: none;
 }
