--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,13 @@
   border: 1px dotted black;
   border-radius: 10px;
   padding: 2rem;
+  position: relative;
+}
+.card h4 {
+  display: inline;
+}
+.card .menu {
+  position: absolute;
 }
 
 .toggleDisplay {
