--- a/css/styles.scss
+++ b/css/styles.scss
@@ -23,6 +23,14 @@
     border: 1px dotted black;
     border-radius: 10px;
     padding: 2rem;
+    position: relative;
+    h4{
+        display: inline;
+    }
+
+    .menu{
+        position: absolute;
+    }
 }
 
 .toggleDisplay{
