Add scss structure and some variables

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,36 @@
+html {
+  font-family: "Quicksand", sans-serif;
+}
+
+html, body {
+  padding: 0px;
+  margin: 0px;
+}
+
+h2 {
+  margin: 0px;
+}
+
+h3 {
+  margin: 0px;
+}
+
+h4 {
+  margin: 0px;
+}
+
+h5 {
+  margin: 0px;
+}
+
+h6 {
+  margin: 0px;
+}
+
+p {
+  margin: 0px;
+}
+
 .main {
   display: flex;
 }
@@ -17,17 +50,33 @@
   flex-direction: column;
 }
 
+.taskHead {
+  flex-direction: row;
+  align-items: center;
+  position: relative;
+}
+
 .card {
   border: 1px dotted black;
   border-radius: 10px;
-  padding: 2rem;
-  position: relative;
-}
-.card h4 {
-  display: inline;
+  padding: 1.5rem;
+  display: flex;
 }
 .card .menu {
   position: absolute;
+  border: 1px dotted black;
+  top: 30px;
+  right: 10px;
+}
+.card .menu * {
+  padding: 10px;
+  margin: 0px;
+}
+.card .menu p {
+  background-color: white;
+}
+.card .menu p:hover {
+  background-color: red;
 }
 
 .toggleDisplay {
