Correcting code for less repeating code

--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -3,8 +3,8 @@
 $white: #ffffff;
 $offWhite: #f8f8f8;
 $backGray: #bebebe;
-$blue: #11117d;
-$orange: #f98d00;
+$blue: #1212e0;
+$orange: #ffbf6b;
 
 //Padding Margin
 $paddingsm: 1rem;
