--- a/css/styles.css
+++ b/css/styles.css
@@ -39,11 +39,12 @@ p {
   gap: 1rem;
 }
 .tasks .addTaskButton {
-  color: #11117d;
+  color: #1212e0;
   background-color: #ffffff;
   border: 1px, solid, #bebebe;
   border-radius: 0.3rem;
   padding: 0.5rem;
+  font-weight: bold;
 }
 
 .taskHead {
@@ -62,7 +63,7 @@ p {
   flex-direction: column;
 }
 .card .menuButton {
-  background-color: #f98d00;
+  background-color: #ffbf6b;
   border-radius: 120px;
   padding: 8px 10px;
 }
