--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 html, body {
   padding: 0px;
   margin: 0px;
+  height: 100%;
   font-family: "Quicksand", sans-serif;
 }
 
@@ -13,8 +14,8 @@ p {
 }
 
 .main {
+  height: 100%;
   display: flex;
-  margin: 3rem;
 }
 .main > * {
   border: 1px, solid, #bebebe;
@@ -23,11 +24,12 @@ p {
 }
 
 .nav, .projects {
+  display: none;
   filter: blur(2px);
 }
 
 .production {
-  flex-grow: 1;
+  height: 100%;
   background-color: #f8f8f8;
 }
 
@@ -38,14 +40,17 @@ p {
   gap: 1rem;
 }
 .taskFolder .tasks {
-  flex-grow: 1;
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  max-height: 30%;
+}
+.taskFolder .tasks p {
+  overflow: hidden;
+}
+.taskFolder .tasks .taskHead {
+  display: flex;
 }
 .taskFolder .status {
-  flex-grow: 1;
   display: flex;
   flex-direction: column;
   gap: 1rem;
